# opengl

./: CMakeLists.txt  autogen.sh
include/: glad.h
lib/: libcglm.so.0.9.3
src/: glad.c  main.c  shader.c  shader.h  texture.c  texture.h  triangle.c  triangle.h  utils.c  utils.h  window.c  window.h
src/shaders/: fragment.glsl  texture_frag.glsl  vertex.glsl
